metadata: Export skeleton before name is acquired

Exporting the skeleton after acquiring the name is racy, as documented
in the GIO docs for g_bus_own_name.

https://bugzilla.gnome.org/show_bug.cgi?id=743653